# quizli

./: .coveragerc  404.html  README.md  demos.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy_docs.yml  test_package.yml
code_reference/: cli.html  examples.html  index.html  layout.html  quiz.html  session.html  utils.html
docs/: demos.md  index.md
docs/code_reference/: cli.md  examples.md  index.md  layout.md  quiz.md  session.md  utils.md
docs/learning_guide/: cli.md  documentation.md  index.md  publishing.md  quiz.md  testing.md
docs/notebooks/: quizli.ipynb
docs/user_guide/: cli.md  index.md
examples/: quiz.csv
learning_guide/: cli.html  documentation.html  index.html  publishing.html  quiz.html  testing.html
notebooks/: quizli.html
quizli/: __init__.py  examples.py  layout.py  main.py  quiz.py  session.py  utils.py
search/: search_index.json
tests/: test_quizli.py
user_guide/: cli.html  index.html
